--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2",
+    "react-social-icons": "^6.24.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
